app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

@import 'variables';

.topbar {
  background: $primary;
  color: white;
  padding: 1em;
  border-bottom: 1px solid darken($primary, 15%);
  margin-bottom: 1em;
  display: flex;
  justify-content: space-between;

  a, a:visited, a:hover, a:active {
    color: white;
    margin: 0 1em;
  }

  .dropdown-menu a, .dropdown-menu a:visited, .dropdown-menu a:hover, .dropdown-menu a:active {
    color: $key;
    margin: unset;
  }

  div {
    display: inline-block;
    align-self: center;

    &.tb-left {
      width: 20%;
    }

    &.tb-right {
      width: 80%;
    }
  }
}

.id-list {
  span::after {
    content: ", ";
  }

  span:last-child::after {
    content: "";
  }
}

